infer/tests/codetoanalyze/cpp/errors/methods/conversion_operator.cpp
../../frontend/methods/conversion_operator.cpp